--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,107 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+  --bg-color:#1A257E;
+  --primary:#1450A3;
+  --white:#fff;
+  --black:#000;
+  --p-color:#605d5d;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* common css */
+body {
+  margin: 0;
+  font-family: "Open Sans", sans-serif;
+}
+a{
+  text-decoration: none;
+}
+*{
+  box-sizing: border-box;
+  margin: 0;
+}
+ul,li{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.container{
+  max-width: 1380px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+img{
+  width: 100%;
+}
+
+/* header */
+
+.navbar{
+  background-color: var(--bg-color);
+}
+.navbar .logo img{
+  height: 60px;
+}
+.navbar .profile i{
+  font-size: 28px;
+  color: var(--white);
+  padding: 10px 12px;
+  border: 2px solid var(--white);
+  border-radius: 50%;
+}
+
+.sider{
+  margin-top: 90px;
+}
+.sider ul{
+  /* border: 1px solid var(--black);
+  width: 20%; */
+}
+.sider-data li{
+  font-size: 18px;
+  font-weight: 500;
+  color: var(--p-color);
+  padding-bottom: 20px;
+}
+.adminbar{
+  margin-top: 90px;
+}
+.siderbar{
+  border-right: 1px solid #a4a1a1;
+  padding: 20px;
+  height: 100vh;
+  margin-right: 50px;
+}
+table img{
+  width: 55px;
+}
+table td{
+  padding: 10px 0;
+  border-bottom: 1px solid #a4a1a1;
+  font-size: 16px;
+  font-weight: 500;
+}
+table th{
+  background-color: var(--primary);
+  color: var(--white);
+  font-size: 16px;
+  font-weight: 500;
+}
+.btn{
+  background-color: var(--primary);
+  padding: 10px 20px;
+  color: var(--white);
+  font-size: 17px;
+  font-weight: 600;
+  margin-bottom: 30px; 
+}
+.btn:hover{
+  color: var(--white);
+}
+.btn-check:focus+.btn, .btn:focus{
+  box-shadow: none;
+}
+.removebtn{
+  background-color: transparent;
+  border: none;
+  color: var(--p-color);
+  font-size: 18px;
 }
