--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
-:root{
-  --bg-color:#1A257E;
-  --primary:#1450A3;
-  --white:#fff;
-  --black:#000;
-  --p-color:#605d5d;
+:root {
+  --bg-color: #1A257E;
+  --primary: #1450A3;
+  --white: #fff;
+  --black: #000;
+  --p-color: #605d5d;
+  --font-color: #242424;
 }
 
 /* common css */
@@ -11,36 +12,44 @@ body {
   margin: 0;
   font-family: "Open Sans", sans-serif;
 }
-a{
+
+a {
   text-decoration: none;
 }
-*{
+
+* {
   box-sizing: border-box;
   margin: 0;
 }
-ul,li{
+
+ul,
+li {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-.container{
+
+.container {
   max-width: 1380px;
   padding: 0 15px;
   margin: 0 auto;
 }
-img{
+
+img {
   width: 100%;
 }
 
 /* header */
 
-.navbar{
+.navbar {
   background-color: var(--bg-color);
 }
-.navbar .logo img{
+
+.navbar .logo img {
   height: 60px;
 }
-.navbar .profile i{
+
+.navbar .user i {
   font-size: 28px;
   color: var(--white);
   padding: 10px 12px;
@@ -48,60 +57,182 @@ img{
   border-radius: 50%;
 }
 
-.sider{
+.sider {
   margin-top: 90px;
 }
-.sider ul{
-  /* border: 1px solid var(--black);
-  width: 20%; */
-}
-.sider-data li{
+
+.sider-data li {
   font-size: 18px;
   font-weight: 500;
   color: var(--p-color);
   padding-bottom: 20px;
 }
-.adminbar{
+
+.adminbar {
   margin-top: 90px;
 }
-.siderbar{
+
+.siderbar {
   border-right: 1px solid #a4a1a1;
   padding: 20px;
   height: 100vh;
   margin-right: 50px;
 }
-table img{
+
+table img {
   width: 55px;
 }
-table td{
+
+table td {
   padding: 10px 0;
   border-bottom: 1px solid #a4a1a1;
   font-size: 16px;
   font-weight: 500;
 }
-table th{
+
+table th {
   background-color: var(--primary);
   color: var(--white);
   font-size: 16px;
   font-weight: 500;
 }
-.btn{
+
+.btn {
   background-color: var(--primary);
   padding: 10px 20px;
   color: var(--white);
   font-size: 17px;
   font-weight: 600;
-  margin-bottom: 30px; 
+  margin-bottom: 30px;
 }
-.btn:hover{
+
+.btn:hover {
   color: var(--white);
 }
-.btn-check:focus+.btn, .btn:focus{
+
+.btn-check:focus+.btn,
+.btn:focus {
   box-shadow: none;
 }
-.removebtn{
+
+.removebtn {
   background-color: transparent;
   border: none;
   color: var(--p-color);
   font-size: 18px;
+}
+
+.collection-card .form-card .form-data {
+  padding: 30px;
+  border: 1px solid #dee2e6;
+  border-radius: 10px;
+  margin-top: 30px;
+}
+
+.collection-card .form-card .form-data h2 {
+  font-size: 17px;
+  color: var(--white);
+  font-weight: 600;
+  padding: 8px 10px;
+  background-color: var(--primary);
+  border-bottom: 1px solid #dee2e6;
+  border-radius: 5px;
+}
+
+.login .login-side {
+  background-color: var(--bg-color);
+  height: 100vh;
+}
+
+.login .row {
+  margin: 0;
+}
+
+.login .logo-img {
+  width: 180px;
+}
+
+.login .info {
+  margin: 0 auto;
+  padding: 30px;
+  border: 1px solid var(--p-color);
+  border-radius: 10px;
+}
+
+.login .login-data label {
+  width: 350px;
+  font-size: 17px;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.login .data {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+}
+
+.login .login-data h2 {
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.login .login-data input {
+  margin: 10px 0;
+}
+
+.login .login-data .form-control {
+  font-size: 14px;
+}
+
+.profile {
+  border: 1px solid #dee2e6;
+  position: fixed;
+  top: 75px;
+  right: 10px;
+  width: 250px;
+  background-color: var(--white);
+  text-align: center;
+}
+
+.profile .profile-name ul li a {
+  color: var(--font-color);
+  padding: 5px 10px;
+  display: inline-block;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+
+.profile .profile-name ul {
+  border-bottom: 1px solid #dee2e6;
+  padding-bottom: 10px;
+}
+
+.profile .space {
+  padding: 30px 0px;
+  background-color: var(--primary);
+}
+
+.profile .user {
+  top: 12px;
+  left: 40%;
+}
+
+.profile .user button {
+  height: 40px;
+  width: 40px;
+  background-color: var(--white);
+  color: var(--h-color);
+  border: transparent;
+  border-radius: 20px;
+  font-size: 20px;
+  font-weight: 800;
+  text-transform: capitalize;
+}
+
+.profile .profile-name .logout {
+  margin: 5px 0;
+  background-color: transparent;
+  border: none;
 }
